2001-07-16  Chema Celorio  <chema@celorio.com>

	* default-application-properties.c (possible_editors): is gedit not gEdit
	plues it is the default editor, not emacs ;-) (Yes, i MAY be a little biased
	here)

2001-07-16  Richard Hestilow  <hestilow@ximian.com>

	* Makefile.am: Fix typo in install-data-local.

2001-07-16  Richard Hestilow  <hestilow@ximian.com>

	* ChangeLog started.

	* default-application-properties.c (main): Pass correct name to
	capplet_widget_init, for .desktop file magic.